@@ -7,6 +7,7 @@
 	* Cleanup: Removed superfluous class for debug output and integrated it to regular class
 	* Cleanup: Removed CLI cleaner for elderly TYPO3 releases (< 4.1)
 	* Fixed bug: Fixed some hanging record sets
+	* Fixed bug: Info module does not work anymore due to calls to protected methods/variables
 
 2008-02-22  Michiel Roos  <michiel@netcreators.com>
 
